native/java/app/src/main/java/org/zowe/zowex/ffm/generated/ZdsCApi.java

// Generated by jextract

package org.zowe.zowex.ffm.generated;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class ZdsCApi extends ZdsCApi$shared {

    ZdsCApi() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }
    /**
     * {@snippet lang=c :
     * typedef long ptrdiff_t
     * }
     */
    public static final OfLong ptrdiff_t = ZdsCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long size_t
     * }
     */
    public static final OfLong size_t = ZdsCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef int wchar_t
     * }
     */
    public static final OfInt wchar_t = ZdsCApi.C_INT;

    private static class zds_c_create_data_set {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_create_data_set");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_data_set(const char *dsn, const DS_ATTRIBUTES_C *attributes)
     * }
     */
    public static FunctionDescriptor zds_c_create_data_set$descriptor() {
        return zds_c_create_data_set.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_data_set(const char *dsn, const DS_ATTRIBUTES_C *attributes)
     * }
     */
    public static MethodHandle zds_c_create_data_set$handle() {
        return zds_c_create_data_set.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_data_set(const char *dsn, const DS_ATTRIBUTES_C *attributes)
     * }
     */
    public static MemorySegment zds_c_create_data_set$address() {
        return zds_c_create_data_set.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_data_set(const char *dsn, const DS_ATTRIBUTES_C *attributes)
     * }
     */
    public static MemorySegment zds_c_create_data_set(MemorySegment dsn, MemorySegment attributes) {
        var mh$ = zds_c_create_data_set.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_create_data_set", dsn, attributes);
            }
            return (MemorySegment)mh$.invokeExact(dsn, attributes);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_list_data_sets {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_list_data_sets");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSListResponse_C *zds_c_list_data_sets(const char *dsn)
     * }
     */
    public static FunctionDescriptor zds_c_list_data_sets$descriptor() {
        return zds_c_list_data_sets.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSListResponse_C *zds_c_list_data_sets(const char *dsn)
     * }
     */
    public static MethodHandle zds_c_list_data_sets$handle() {
        return zds_c_list_data_sets.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSListResponse_C *zds_c_list_data_sets(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_list_data_sets$address() {
        return zds_c_list_data_sets.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSListResponse_C *zds_c_list_data_sets(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_list_data_sets(MemorySegment dsn) {
        var mh$ = zds_c_list_data_sets.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_list_data_sets", dsn);
            }
            return (MemorySegment)mh$.invokeExact(dsn);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_read_data_set {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_read_data_set");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_read_data_set(const char *dsn, const char *codepage)
     * }
     */
    public static FunctionDescriptor zds_c_read_data_set$descriptor() {
        return zds_c_read_data_set.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_read_data_set(const char *dsn, const char *codepage)
     * }
     */
    public static MethodHandle zds_c_read_data_set$handle() {
        return zds_c_read_data_set.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_read_data_set(const char *dsn, const char *codepage)
     * }
     */
    public static MemorySegment zds_c_read_data_set$address() {
        return zds_c_read_data_set.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_read_data_set(const char *dsn, const char *codepage)
     * }
     */
    public static MemorySegment zds_c_read_data_set(MemorySegment dsn, MemorySegment codepage) {
        var mh$ = zds_c_read_data_set.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_read_data_set", dsn, codepage);
            }
            return (MemorySegment)mh$.invokeExact(dsn, codepage);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_write_data_set {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_write_data_set");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_write_data_set(const char *dsn, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static FunctionDescriptor zds_c_write_data_set$descriptor() {
        return zds_c_write_data_set.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_write_data_set(const char *dsn, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MethodHandle zds_c_write_data_set$handle() {
        return zds_c_write_data_set.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_write_data_set(const char *dsn, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MemorySegment zds_c_write_data_set$address() {
        return zds_c_write_data_set.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSStringResponse_C *zds_c_write_data_set(const char *dsn, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MemorySegment zds_c_write_data_set(MemorySegment dsn, MemorySegment data, MemorySegment codepage, MemorySegment etag) {
        var mh$ = zds_c_write_data_set.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_write_data_set", dsn, data, codepage, etag);
            }
            return (MemorySegment)mh$.invokeExact(dsn, data, codepage, etag);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_delete_data_set {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_delete_data_set");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_delete_data_set(const char *dsn)
     * }
     */
    public static FunctionDescriptor zds_c_delete_data_set$descriptor() {
        return zds_c_delete_data_set.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_delete_data_set(const char *dsn)
     * }
     */
    public static MethodHandle zds_c_delete_data_set$handle() {
        return zds_c_delete_data_set.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_delete_data_set(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_delete_data_set$address() {
        return zds_c_delete_data_set.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_delete_data_set(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_delete_data_set(MemorySegment dsn) {
        var mh$ = zds_c_delete_data_set.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_delete_data_set", dsn);
            }
            return (MemorySegment)mh$.invokeExact(dsn);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_create_member {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_create_member");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_member(const char *dsn)
     * }
     */
    public static FunctionDescriptor zds_c_create_member$descriptor() {
        return zds_c_create_member.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_member(const char *dsn)
     * }
     */
    public static MethodHandle zds_c_create_member$handle() {
        return zds_c_create_member.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_member(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_create_member$address() {
        return zds_c_create_member.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSBasicResponse_C *zds_c_create_member(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_create_member(MemorySegment dsn) {
        var mh$ = zds_c_create_member.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_create_member", dsn);
            }
            return (MemorySegment)mh$.invokeExact(dsn);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_list_members {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZdsCApi.C_POINTER,
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_list_members");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZDSMemListResponse_C *zds_c_list_members(const char *dsn)
     * }
     */
    public static FunctionDescriptor zds_c_list_members$descriptor() {
        return zds_c_list_members.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZDSMemListResponse_C *zds_c_list_members(const char *dsn)
     * }
     */
    public static MethodHandle zds_c_list_members$handle() {
        return zds_c_list_members.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZDSMemListResponse_C *zds_c_list_members(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_list_members$address() {
        return zds_c_list_members.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZDSMemListResponse_C *zds_c_list_members(const char *dsn)
     * }
     */
    public static MemorySegment zds_c_list_members(MemorySegment dsn) {
        var mh$ = zds_c_list_members.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_list_members", dsn);
            }
            return (MemorySegment)mh$.invokeExact(dsn);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_free_basic_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_free_basic_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zds_c_free_basic_response(ZDSBasicResponse_C *response)
     * }
     */
    public static FunctionDescriptor zds_c_free_basic_response$descriptor() {
        return zds_c_free_basic_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zds_c_free_basic_response(ZDSBasicResponse_C *response)
     * }
     */
    public static MethodHandle zds_c_free_basic_response$handle() {
        return zds_c_free_basic_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zds_c_free_basic_response(ZDSBasicResponse_C *response)
     * }
     */
    public static MemorySegment zds_c_free_basic_response$address() {
        return zds_c_free_basic_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zds_c_free_basic_response(ZDSBasicResponse_C *response)
     * }
     */
    public static void zds_c_free_basic_response(MemorySegment response) {
        var mh$ = zds_c_free_basic_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_free_basic_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_free_string_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_free_string_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zds_c_free_string_response(ZDSStringResponse_C *response)
     * }
     */
    public static FunctionDescriptor zds_c_free_string_response$descriptor() {
        return zds_c_free_string_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zds_c_free_string_response(ZDSStringResponse_C *response)
     * }
     */
    public static MethodHandle zds_c_free_string_response$handle() {
        return zds_c_free_string_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zds_c_free_string_response(ZDSStringResponse_C *response)
     * }
     */
    public static MemorySegment zds_c_free_string_response$address() {
        return zds_c_free_string_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zds_c_free_string_response(ZDSStringResponse_C *response)
     * }
     */
    public static void zds_c_free_string_response(MemorySegment response) {
        var mh$ = zds_c_free_string_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_free_string_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_free_list_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_free_list_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zds_c_free_list_response(ZDSListResponse_C *response)
     * }
     */
    public static FunctionDescriptor zds_c_free_list_response$descriptor() {
        return zds_c_free_list_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zds_c_free_list_response(ZDSListResponse_C *response)
     * }
     */
    public static MethodHandle zds_c_free_list_response$handle() {
        return zds_c_free_list_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zds_c_free_list_response(ZDSListResponse_C *response)
     * }
     */
    public static MemorySegment zds_c_free_list_response$address() {
        return zds_c_free_list_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zds_c_free_list_response(ZDSListResponse_C *response)
     * }
     */
    public static void zds_c_free_list_response(MemorySegment response) {
        var mh$ = zds_c_free_list_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_free_list_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zds_c_free_mem_list_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZdsCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zds_c_free_mem_list_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zds_c_free_mem_list_response(ZDSMemListResponse_C *response)
     * }
     */
    public static FunctionDescriptor zds_c_free_mem_list_response$descriptor() {
        return zds_c_free_mem_list_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zds_c_free_mem_list_response(ZDSMemListResponse_C *response)
     * }
     */
    public static MethodHandle zds_c_free_mem_list_response$handle() {
        return zds_c_free_mem_list_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zds_c_free_mem_list_response(ZDSMemListResponse_C *response)
     * }
     */
    public static MemorySegment zds_c_free_mem_list_response$address() {
        return zds_c_free_mem_list_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zds_c_free_mem_list_response(ZDSMemListResponse_C *response)
     * }
     */
    public static void zds_c_free_mem_list_response(MemorySegment response) {
        var mh$ = zds_c_free_mem_list_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zds_c_free_mem_list_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final MemorySegment NULL = MemorySegment.ofAddress(0L);
    /**
     * {@snippet lang=c :
     * #define NULL (void*) 0
     * }
     */
    public static MemorySegment NULL() {
        return NULL;
    }
}

